Added test case: testCreateProgrammingExerciseWithSequentialTestRuns()